# reader

./: .gitignore  CMakeLists.txt  partitions.csv  pyproject.toml  sdkconfig.defaults
book/: a-e-w-mason_the-four-feathers.epub
docs/: fonts.md  tile-cache-plan.md
examples/03_LVGL_V8_Test/LVGL_Test_90/: CMakeLists.txt
hardware/: case.step
main/: CMakeLists.txt  app.c  book_font.h  content.h  content_generated.h  display.h  display_hal.c  display_hal.h  document_layout.c  document_layout.h  idf_component.yml  reader_config.h  reader_font.c  reader_font.h  reader_menu.c  reader_menu.h  reader_theme.c  reader_theme.h  render_runtime.c  render_runtime.h  stats.c  stats.h  tile_cache.c  tile_cache.h  touch_input.c  touch_input.h
main/fonts/: book_font_body_16.c  book_font_body_20.c  book_font_body_24.c  book_font_title_18.c  book_font_title_22.c  book_font_title_26.c
tools/: epub_extract.py  generate_lvgl_fonts.py
